<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        app:showAsAction="always"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        >
    </item>
    <item
        android:id="@+id/cart"
        app:showAsAction="always"
        android:title="@string/cart"
        android:icon="@drawable/cart_icon"
        app:actionLayout="@layout/custom_menu_layout"
        >
    </item>
    <item
        android:id="@+id/log_out_button"
        app:showAsAction="always"
        android:icon="@drawable/logout_icon"
        android:title="@string/log_out"
        android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/settings_button"
        app:showAsAction="ifRoom"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        android:orderInCategory="1">
    </item>
</menu>