<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_marginTop="@dimen/default_margin"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
    />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationTextView"
        android:layout_marginTop="@dimen/default_margin"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/userName"
        android:inputType="text"
        android:autofillHints="@string/userName"
        android:minHeight="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
    />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="@dimen/default_margin"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email"
        android:minHeight="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmail"
        android:layout_marginTop="@dimen/default_margin"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="@string/password"
        android:minHeight="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/passwordConfirmationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="@dimen/default_margin"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:autofillHints="@string/confirm_new_password"
        android:minHeight="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordConfirmationEditText"
        android:layout_marginTop="@dimen/default_margin"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:autofillHints="@string/phone_number"
        android:minHeight="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneSpinner"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:minHeight="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/phoneNumberEditText"
    />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneSpinner"
        android:layout_marginTop="@dimen/default_margin"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/address"
        android:inputType="textPostalAddress|textMultiLine"
        android:autofillHints="@string/address"
        android:minHeight="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLines="3"
        />

    <RadioGroup
        android:id="@+id/userType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/addressEditText"
        >
        <RadioButton
            android:id="@+id/buyerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyer"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seller"
            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/userType"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_centerHorizontal="true"
        >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:onClick="register"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginStart="40dp"
        android:onClick="Cancel"
        />

    </LinearLayout>

</RelativeLayout>